@@ -40,3 +40,14 @@ test('#equalsDate different year, different time', t => {
   const e = new DateTimeWrapper('2021-12-24T17:46:01Z')
   t.false(d.equalsDate(e))
 })
+
+test('#getCurrentDatetimeAsString correct format', t => {
+  const d = DateTimeWrapper.getCurrentDatetimeAsString()
+  t.is(d[4], '-')
+  t.is(d[7], '-')
+  t.is(d[10], 'T')
+  t.is(d[13], ':')
+  t.is(d[16], ':')
+  t.is(d[19], '.')
+  t.is(d[d.length-3], ':')
+})
