@@ -16,6 +16,7 @@ License: <wordpress-license>
 You can display the upcoming events using a widget and everywhere else using a shortcut.
 
 Shortcut format with limiting the number of events to show to 3 for example: `[<wordpress-name>-events-list events-count=3]`
+Optionally, you can only show the events of a specific group by indicatings its name: `[<wordpress-name>-events-list events-count=3 group-name="mygroup"]
 
 The source code is available on [Github](https://github.com/dwaxweiler/connector-mobilizon).
 
