@@ -3,6 +3,7 @@ Added
 - Add `changelog.txt`
 - Add changelog maintenance steps to `README.md`
 - Add link to Github repository to `readme.txt`
+- Add option to show events of a specific group by indicating its name
 Changed
 - Use same Markdown style in `README.md` as in other documents
 Deprecated
